--- a/style.css
+++ b/style.css
@@ -401,9 +401,8 @@ nav.globalMenuSp ul li a {
   text-align: left;
 }
 .map{
-  height: 0;
+  height: 500px;
   overflow: hidden;
-  padding-bottom: 56.25%;
   position: relative;
   margin: 80px auto;
 }
@@ -764,7 +763,9 @@ nav.globalMenuSp ul li a{
   width:300px;
 }
 .map{
+  height:0;
   margin: 80px auto;
+  padding-bottom: 56.25%;
 }
 .btm{
   display: block;
