--- a/style.css
+++ b/style.css
@@ -305,11 +305,12 @@ nav.globalMenuSp ul li a {
 .fphoto{
   width:100%;
   height: 500px;
-  margin: 80px 0 240px;
+  margin: 80px 0 ;
+  overflow: hidden;
 }
 .fphoto img{
   width:100%;
-  height: 500px;
+  height: 100%;
   object-fit: cover;
   overflow: hidden;
 }
@@ -318,6 +319,7 @@ nav.globalMenuSp ul li a {
 
 .ac{
   text-align: center;
+  margin: 240px auto;
 }
 
 .ac-ttl h3{
@@ -401,10 +403,10 @@ nav.globalMenuSp ul li a {
   text-align: left;
 }
 .map{
+  margin: 80px auto;
   height: 500px;
   overflow: hidden;
   position: relative;
-  margin: 80px auto;
 }
 .map iframe{
   position: absolute;
@@ -415,7 +417,7 @@ nav.globalMenuSp ul li a {
 }
 
 .btm{
-  padding:160px 0 80px;
+  padding:80px 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -514,13 +516,18 @@ nav.globalMenuSp ul li a {
   width:230px;
   font-size: 14px;
 }
+.ac{
+  margin: 180px auto;
+}
 .ac-cp{
   width:400px;
 }
 .ac-cs{
   width:400px;
 }
-
+.map{
+  height: 400px;
+}
 
 }
 @media screen and (max-width: 768px) {
@@ -657,11 +664,7 @@ nav.globalMenuSp.active {
 }
 .fphoto{
   height: 300px;
-  margin: 80px 0 180px;
-}
-.fphoto img{
-  height: 300px;
-
+  margin: 80px 0 ;
 }
 .ac-c{
   display: block;
@@ -753,8 +756,8 @@ nav.globalMenuSp ul li a{
 .ff-ttl{
   width:300px;
 }
-.fphoto{
-  margin-bottom: 100px;
+.ac{
+  margin: 100px auto;
 }
 .ac-cp{
   width:300px;
@@ -763,9 +766,8 @@ nav.globalMenuSp ul li a{
   width:300px;
 }
 .map{
-  height:0;
   margin: 80px auto;
-  padding-bottom: 56.25%;
+  height: 300px;
 }
 .btm{
   display: block;
