--- a/style.css
+++ b/style.css
@@ -149,8 +149,11 @@ nav.globalMenuSp ul li a {
 .cr{
   color: #fff;
   position: absolute;
-  bottom:40%;
+  bottom:50%;
   left:40px;
+  transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
   width: 80px;
   writing-mode: vertical-rl;
   font-size: 14px;
@@ -165,6 +168,9 @@ nav.globalMenuSp ul li a {
   position: absolute;
   bottom:50%;
   right:40px;
+  transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
   width: 80px;
   writing-mode: vertical-rl;
   font-size: 14px;
