--- a/style.css
+++ b/style.css
@@ -695,6 +695,9 @@ nav.globalMenuSp.active {
 nav.globalMenuSp ul li:first-child{
       margin-top: 40px;
 }
+  nav.globalMenuSp ul li{
+    padding:15px;
+  }
 nav.globalMenuSp ul li a{
   font-size: 13px;
   margin-top: 0;
