--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ nav.globalMenuSp ul li a {
   color:#fff;
   font-size: 35px;
   letter-spacing: 5px;
-  font-weight: normal;
+  font-weight: bold;
 }
 .fv-s{
   font-size: 18px;
