--- a/style.css
+++ b/style.css
@@ -712,7 +712,7 @@ nav.globalMenuSp ul li a{
 }
 .place{
   right:0;
-  top:;
+  top:90%;
   writing-mode:horizontal-tb;
   transform:none;
   width:100%;
