--- a/style.css
+++ b/style.css
@@ -73,6 +73,25 @@ nav.globalMenuSp ul li a {
   font-weight: 500;
 }
 
+.start {
+	background: #000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 9000;
+}
+.start p {
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	display: none;
+	z-index: 9999;
+	width: 280px;
+}
+
 
 .fv{
   width:100vw;
